<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>asmeta</groupId>
	<artifactId>asmeta.evoasmetatg</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>asmeta.evotest</name>

  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
	<build>
		<plugins>
  			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<finalName>evoasmetatg</finalName>
							<appendAssemblyId>false</appendAssemblyId>
							<outputDirectory>dist</outputDirectory>
							<archive>
								<manifest>
									<mainClass>
										org.asmeta.evoasmetatg.main.EvoAsmetaTgCLI
									</mainClass>
								</manifest>
							</archive>
							<descriptorRefs>
								<descriptorRef>jar-with-dependencies</descriptorRef>
							</descriptorRefs>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	
	<dependencies>
		<!-- Apache commons cli -->
		<dependency>
		 	 <groupId>commons-cli</groupId>
		 	 <artifactId>commons-cli</artifactId>
		 	 <version>1.8.0</version>
		</dependency>
		<!-- Log4j -->
	    <dependency>
	     	 <groupId>org.apache.logging.log4j</groupId>
	     	 <artifactId>log4j-api</artifactId>
	    	 <version>2.24.0</version>
	    </dependency>
	    <dependency>
	     	 <groupId>org.apache.logging.log4j</groupId>
	     	 <artifactId>log4j-core</artifactId>
	     	 <version>2.24.0</version>
	    </dependency>
	    <dependency>
	     <!-- Jackson YAML -->
	      	<groupId>com.fasterxml.jackson.dataformat</groupId>
	      	<artifactId>jackson-dataformat-yaml</artifactId>
	     	<version>2.17.2</version>
	     	<scope>runtime</scope>
	    </dependency>
		<!-- ASMETA dependencies -->
		<!-- Asmetal2Java -->
		<dependency>
			<groupId>asmeta</groupId>
			<artifactId>asmetal2java_codegen</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
		<!-- Junit2Avalla -->
		<dependency>
			<groupId>asmeta</groupId>
			<artifactId>junit2avalla</artifactId>
			<version>0.0.1-SNAPSHOT</version>
		</dependency>
  </dependencies>

</project>
